[build-system]
requires = ["cmake", "setuptools", "wheel", "ninja", "numpy"]

[project]
name = "ROOT"
version = "0.1a5"

requires-python = ">=3.8"
authors = [
  {name = "Vincenzo Eduardo Padulano", email="vincenzo.eduardo.padulano@cern.ch"}
]
maintainers = [
  {name = "Vincenzo Eduardo Padulano", email = "vincenzo.eduardo.padulano@cern.ch"}
]
description = "An open-source data analysis framework used by high energy physics and others."
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
root = "ROOT._rootcli:main"

[tool.cibuildwheel]
# Increase pip debugging output
build-verbosity = 1
build="cp3{8,9,10,11,12}-manylinux_x86_64"
#build="cp312-manylinux_x86_64"
manylinux-x86_64-image = "manylinux_2_28"

# Install system library
[tool.cibuildwheel.linux]
before-all = "dnf install -y epel-release && /usr/bin/crb enable && dnf install -y openssl-devel libX11-devel libXpm-devel libXft-devel libXext-devel libuuid-devel tbb tbb-devel xrootd-client xrootd-client-devel"
